# llgraph

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: code-index.md  cursor-agent.md  plan-mode.md  会话上下文与历史.md  大模型协议对接与模型适配.md  操作手册.md  模块说明.md  项目结构.md
examples/: llgraph.env.example
examples/user-llgraph/: agent.json  sandbox.json
llgraph/: __init__.py  __main__.py  main.py
llgraph/adapters/: __init__.py
llgraph/cli/: __init__.py  index_cli.py  markdowns_index.py  plan_cli.py  search_cli.py  search_terms.py  web_cli.py
llgraph/code_index/: __init__.py  ast_chunker.py  chunker.py  embedder.py  embedding_config.py  file_scan.py  hybrid.py  index_dispatch.py  index_lock.py  index_logging.py  index_pipeline.py  index_progress.py  index_ready.py  index_settings.py  index_skip.py  index_watch.py  index_write_session.py  indexer.py  literal_grep.py  local_embedder.py  manifest.py  parallel_search.py  path_hits.py  paths.py  rebuild.py  search.py  search_format.py  search_params.py  search_path_filter.py  store.py  vector_search.py
llgraph/commands/: __init__.py  help_text.py  meta_commands.py  review_command.py
llgraph/config/: __init__.py  catalog_paths.py  config.py  edit_settings.py  logging_settings.py  mcp_config.py  sandbox_settings.py  shell_settings.py  survey_settings.py  web_search_settings.py  workspace_config.py
llgraph/console/: api.py  (+4 more)
scripts/: check_imports.py  check_model_dispatch_compat.py  migrate_session_canonical_v2.py  probe_prompt_cache.py  probe_tool_calls_by_model.py  reorganize_packages.py  setup.sh  web-dev.sh
tests/: test_agent_abort.py  test_agent_tool_cancel.py  test_agent_turn.py  test_append_pending_user_turn.py  test_context_repair_dispatch.py  test_deepseek_system_prompt.py  test_dispatch_tool_chain.py  test_execution_log.py  test_filesystem_tool_schemas.py  test_inbound_adapter.py  test_inbound_display_all_models.py  test_invoke_prelude.py  test_kimi_tool_call_parse.py  test_llm_response.py  test_model_context_window.py  test_model_thinking.py  test_model_thinking_profile.py  test_parallel_search_guard.py  test_parallel_tool_dispatch.py  test_plan_cancel_and_parallel_search.py  test_plan_phase_resolve.py  test_plan_planner_parse.py  test_plan_subgraph_routing.py  test_prompt_cache_tool_bind.py  test_prompt_loader.py  test_react_limits.py  test_react_step_reminder.py  test_read_jsonl_recent.py  test_search_format.py  test_search_path_tracker.py  test_session_registry_sort.py  test_session_run_log.py  test_session_title_auto.py  test_structured_tool_call.py  test_survey_prompt.py  test_thinking_dispatch.py  test_tool_call_id_unified.py  test_trace_tool_summary.py  test_user_message_content.py  test_web_trace_store.py  (+2 more)
web-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+300 files in other folders)
