[project]
name = "llgraph"
version = "0.1.0"
description = "LangGraph terminal agent (OpenAI-compatible API gateway)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.6.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "textual>=0.80.0",
]

[project.optional-dependencies]
index = [
    "lancedb>=0.6.0",
    "pyarrow>=14.0.0",
    "sentence-transformers>=3.0.0",
]
ast = [
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
]
watch = [
    "watchdog>=4.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
search = [
    "tavily-python>=0.5.0",
]
all = [
    "lancedb>=0.6.0",
    "pyarrow>=14.0.0",
    "sentence-transformers>=3.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "watchdog>=4.0.0",
    "mcp>=1.0.0",
    "tavily-python>=0.5.0",
]

[project.scripts]
llgraph = "llgraph.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llgraph*"]
